--- a/index.html
+++ b/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>TodoList</title>
-	 <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>TodoList</title>
+     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
-	<header class="full-width NavBarP">
-		<div class="full-width NavBarP-Logo"> TodoList
-             </div>
-		
-		<!-- Modo oscuro -->
-	</header>
+    <header class="full-width NavBarP">
+        <div class="full-width NavBarP-Logo"> TodoList </div>
+    </header>
 
-	<section class="banner">
-		<div class="banner-content">
-			<h1>Organiza tu vida</h1>
-		</div>
-	</section>
+    <section class="banner">
+        <div class="banner-content">
+            <h1>Organiza tu vida</h1>
+        </div>
+    </section>
 
-	<article>
+    <article>
+        <form id="app" class="parrallax">
+            <h1> Todo List </h1>
+            <input type="datetime-local" name="fecha"> 
+            <input type="text" name="descripcion" placeholder="Descipcion..">
+            <input type="submit" name="enviar">
+        </form>
+    </article>
 
-		<form id="app">
-			 <input type="datetime-local" name="fecha"> 
-			<input type="text" name="descripcion" placeholder="Introduzca una descripcion">
-			<input type="submit" name="enviar">
+    <script src="Script/main.js" ></script>
 
-		</form>
-
-	</article>
-
-	<div class="nes-table-responsive">
-        <table class=" todos-table">
-            <tr>
-              <th>Fecha y Hora </th>
-              <th> Descripcion </th>
-            </tr>
-        </table>
-      </div>
-
-	<script src="Script/main.js" ></script>
+    <footer>
+        <h1 class="footer-h1"> Alvarez Matias - Samia Lian ©</h1>
+    </footer>
 
 </body>
 </html>
