Se visualizan mal los datos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             <input type="submit" name="enviar">
         </form>
     </article>
+    <div class="nes-table-responsive">
+        <table class=" todos-table" id="table">
+            <tr>
+              <th>Fecha y Hora </th>
+              <th> Descripcion </th>
+            </tr>
+        </table>
+      </div>
 
     <script src="Script/main.js" ></script>
 
