Falta diseño en el Form

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
     <article>
         <form id="app" class="parrallax">
             <h1> Todo List </h1>
-            <input type="datetime-local" name="fecha"> 
-            <input type="text" name="descripcion" placeholder="Descipcion..">
+            <input type="datetime-local" name="fecha" required> 
+            <input type="text" name="descripcion" placeholder="Descipcion.." required>
             <input type="submit" name="enviar">
         </form>
     </article>
-    <div class="nes-table-responsive">
+    <div class="nes-table-responsive"></div>
         <table class=" todos-table" id="table">
             <tr>
               <th>Fecha y Hora </th>
               <th> Descripcion </th>
             </tr>
         </table>
-      </div>
+    </div>
 
-    <script src="Script/main.js" ></script>
-
+    
     <footer>
         <h1 class="footer-h1"> Alvarez Matias - Samia Lian ©</h1>
     </footer>
-
+    
+    <script src="Script/main.js" ></script>
 </body>
 </html>
