--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>TodoList</title>
-     <link rel="stylesheet" href="css/style.css"> 
+     <link rel="stylesheet" href="./css/style.css"> 
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="full-width NavBarP">
@@ -22,15 +24,12 @@
             <h1> Todo List </h1>
             <input type="datetime-local" name="fecha" required> 
             <input type="text" name="descripcion" placeholder="Descipcion.." required>
-            <input type="submit" name="enviar">
+            <input type="submit" name="enviar" id="subir">
         </form>
     </article>
     <div class="nes-table-responsive"></div>
         <table class=" todos-table" id="table">
-            <tr>
-              <th>Fecha y Hora </th>
-              <th> Descripcion </th>
-            </tr>
+            
         </table>
     </div>
 
@@ -39,6 +38,6 @@
         <h1 class="footer-h1"> Alvarez Matias - Samia Lian ©</h1>
     </footer>
     
-    <script src="Script/main.js" ></script>
+    <script src="./Script/main.js" ></script>
 </body>
 </html>
